[gd_scene load_steps=5 format=3 uid="uid://exg11gyqd83"]

[ext_resource type="Script" path="res://Objects/My_Stuff/Speed/objSpeedCloud.gd" id="1_lyxqa"]
[ext_resource type="PackedScene" uid="uid://bnvav0lfj31ym" path="res://Objects/My_Stuff/Speed/objSpeedAdderCustom.tscn" id="1_unfl7"]
[ext_resource type="Texture2D" uid="uid://b5wqv63v5myim" path="res://Graphics/Sprites/My Stuff/boss/cloud1.png" id="2_wq18a"]
[ext_resource type="Texture2D" uid="uid://bk8p3ci6vqb7p" path="res://Graphics/Sprites/My Stuff/boss/cloud2.png" id="3_djcgh"]

[node name="objSpeedCloud" type="Node2D"]
script = ExtResource("1_lyxqa")

[node name="objSpeedAdderCustom" parent="." instance=ExtResource("1_unfl7")]

[node name="cloud1" type="Sprite2D" parent="objSpeedAdderCustom"]
texture = ExtResource("2_wq18a")

[node name="Area2D" type="Area2D" parent="objSpeedAdderCustom/cloud1"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="objSpeedAdderCustom/cloud1/Area2D"]
polygon = PackedVector2Array(-48, 3, -10, -11, 16, -11, 43, 2, 44, 10, 10, 16, -38, 18, -46, 13)

[node name="cloud2" type="Sprite2D" parent="objSpeedAdderCustom"]
texture = ExtResource("3_djcgh")

[node name="Area2D" type="Area2D" parent="objSpeedAdderCustom/cloud2"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="objSpeedAdderCustom/cloud2/Area2D"]
polygon = PackedVector2Array(-22, -3, -7, -9, 16, 3, 20, 12, -5, 20, -28, 15)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="objSpeedAdderCustom/cloud1/Area2D" to="objSpeedAdderCustom" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="objSpeedAdderCustom/cloud1/Area2D" to="objSpeedAdderCustom" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="objSpeedAdderCustom/cloud2/Area2D" to="objSpeedAdderCustom" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="objSpeedAdderCustom/cloud2/Area2D" to="objSpeedAdderCustom" method="_on_area_2d_body_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
